fix: Allowed search suggestions to overflow container

--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@
   }
 
   .search-wrapper {
-    @apply relative flex items-center w-full shadow-sm shadow-zinc-200/50 rounded-2xl overflow-hidden;
+    @apply relative flex items-center w-full shadow-sm shadow-zinc-200/50 rounded-2xl;
   }
 }
 
